commit translated contents

--- a/articles/active-directory/manage-apps/toc.yml
+++ b/articles/active-directory/manage-apps/toc.yml
@@ -49,14 +49,8 @@
           href: developer-guidance-for-integrating-applications.md
     - name: 单一登录
       items:
-        - name: 为多租户应用程序启用 SSO
-          href: isv-sso-content.md
-        - name: 为多租户应用程序创建 Azure 租户
-          href: isv-tenant-multi-tenant-app.md
-        - name: 选择多租户联合身份验证
-          href: isv-choose-multi-tenant-federation.md
-        - name: 为多租户应用程序创建文档
-          href: isv-create-sso-documentation.md
+        - name: 单一登录选项
+          href: sso-options.md
         - name: 计划单一登录部署
           href: plan-sso-deployment.md
         - name: 一键式 SSO
@@ -97,6 +91,16 @@
           href: application-proxy-high-availability-load-balancing.md
         - name: 比较远程访问解决方案
           href: application-proxy-migration.md
+    - name: 将应用推向市场
+      items:
+        - name: 为多租户应用程序启用 SSO
+          href: isv-sso-content.md
+        - name: 为多租户应用程序创建 Azure 租户
+          href: isv-tenant-multi-tenant-app.md
+        - name: 选择多租户联合身份验证
+          href: isv-choose-multi-tenant-federation.md
+        - name: 为多租户应用程序创建文档
+          href: isv-create-sso-documentation.md
 - name: 操作指南
   expanded: false
   items:
