--- a/articles/cognitive-services/Speech-Service/index.yml
+++ b/articles/cognitive-services/Speech-Service/index.yml
@@ -13,12 +13,12 @@ metadata:
   ms.topic: hub-page
   ms.date: 03/24/2020
   ms.author: trbye
-  ms.openlocfilehash: 455f71c7fd9defd7a1187f6b5df6b5b3b9c3131b
-  ms.sourcegitcommit: 73ac360f37053a3321e8be23236b32d4f8fb30cf
+  ms.openlocfilehash: 74fd89633e4add1c577e44b822f1f90a86b3f498
+  ms.sourcegitcommit: c28fc1ec7d90f7e8b2e8775f5a250dd14a1622a6
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 06/30/2020
-  ms.locfileid: "85563767"
+  ms.lasthandoff: 08/13/2020
+  ms.locfileid: "88167770"
 highlightedContent:
   items:
   - title: 什么是语音服务？
@@ -51,15 +51,15 @@ conceptualContent:
       url: index-speech-to-text.yml
   - title: 文本转语音
     links:
+    - itemType: overview
+      text: 关于文本转语音
+      url: text-to-speech.md
     - itemType: quickstart
-      text: 将语音合成到扬声器
-      url: quickstarts/text-to-speech.md
-    - itemType: quickstart
-      text: 将语音合成到音频文件
-      url: quickstarts/text-to-speech-audio-file.md
+      text: 开始使用文本转语音
+      url: get-started-text-to-speech.md
     - itemType: how-to-guide
-      text: 语音合成基础知识
-      url: text-to-speech-basics.md
+      text: 通过 SSML 改进合成
+      url: speech-synthesis-markup.md
     footerLink:
       text: 更多
       url: index-text-to-speech.yml
