--- a/articles/data-share/index.yml
+++ b/articles/data-share/index.yml
@@ -10,13 +10,13 @@ metadata:
   ms.collection: collection
   author: hrasheed-msft
   ms.author: hrasheed
-  ms.date: 09/13/2019
-  ms.openlocfilehash: 66350050a84617b789c6a73c38170dc25dad331d
-  ms.sourcegitcommit: 253d4c7ab41e4eb11cd9995190cd5536fcec5a3c
+  ms.date: 08/11/2020
+  ms.openlocfilehash: 43de19b3caa87bf410ad30a237c2c9e91beba63f
+  ms.sourcegitcommit: 1aef4235aec3fd326ded18df7fdb750883809ae8
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 03/25/2020
-  ms.locfileid: "73802909"
+  ms.lasthandoff: 08/12/2020
+  ms.locfileid: "88136365"
 landingContent:
 - title: 关于 Azure Data Share
   linkLists:
@@ -24,13 +24,17 @@ landingContent:
     links:
     - text: 什么是 Azure Data Share？
       url: overview.md
+    - text: 支持的数据存储
+      url: supported-data-stores.md
   - linkListType: concept
     links:
-    - text: Azure Data Share 概念
+    - text: Azure Data Share 术语
       url: terminology.md
     - text: Azure Data Share 的角色和要求
       url: concepts-roles-permissions.md
-- title: 共享数据
+    - text: 了解定价
+      url: concepts-pricing.md
+- title: 共享和接收数据
   linkLists:
   - linkListType: tutorial
     links:
@@ -40,21 +44,25 @@ landingContent:
       url: subscribe-to-data-share.md
   - linkListType: how-to-guide
     links:
-    - text: 配置数据集映射
-      url: how-to-configure-mapping.md
     - text: 添加数据集
       url: how-to-add-datasets.md
+    - text: 配置数据集映射
+      url: how-to-configure-mapping.md
 - title: 监视和管理
   linkLists:
   - linkListType: how-to-guide
     links:
-    - text: 监视 Azure Data Share
+    - text: 监视共享
       url: how-to-monitor.md
     - text: 排查常见问题
       url: data-share-troubleshoot.md
-    - text: 添加数据集
-      url: how-to-add-datasets.md
+    - text: 添加收件人
+      url: how-to-add-recipients.md
     - text: 删除邀请
       url: how-to-delete-invitation.md
     - text: 撤销共享订阅
       url: how-to-revoke-share-subscription.md
+    - text: Azure Data Share 的安全性概述
+      url: security.md
+    - text: 灾难恢复
+      url: disaster-recovery.md
