--- a/articles/active-directory/manage-apps/index.yml
+++ b/articles/active-directory/manage-apps/index.yml
@@ -12,12 +12,12 @@ metadata:
   author: kenwith
   ms.author: kenwith
   manager: celested
-  ms.openlocfilehash: 875619de27cd3b4258fe5327b28d36d7b1f3f3a3
-  ms.sourcegitcommit: b8702065338fc1ed81bfed082650b5b58234a702
+  ms.openlocfilehash: dc056bbfb880b8cdfc2326edc3036657803f24d7
+  ms.sourcegitcommit: 4913da04fd0f3cf7710ec08d0c1867b62c2effe7
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 08/11/2020
-  ms.locfileid: "88120790"
+  ms.lasthandoff: 08/14/2020
+  ms.locfileid: "88209104"
 landingContent:
 - title: 关于应用程序管理
   linkLists:
@@ -25,6 +25,8 @@ landingContent:
     links:
     - text: 什么是应用程序管理？
       url: what-is-application-management.md
+    - text: 什么是单一登录？
+      url: what-is-single-sign-on.md
   - linkListType: quickstart
     links:
     - text: 快速入门系列
