--- a/articles/data-catalog/TOC.yml
+++ b/articles/data-catalog/TOC.yml
@@ -5,6 +5,7 @@
     - name: 什么是数据目录？
       href: overview.md
 - name: 快速入门
+  expanded: true
   items:
     - name: 创建 Azure 数据目录
       href: data-catalog-get-started.md
@@ -20,11 +21,9 @@
       href: data-catalog-dsr.md
     - name: 采用 Azure 数据目录
       href: data-catalog-adopting-data-catalog.md
-    - name: 先决条件
-      href: data-catalog-prerequisites.md
     - name: 常见问题解答
       href: data-catalog-frequently-asked-questions.md
-- name: 操作方式
+- name: 如何
   items:
     - name: 注册数据源
       href: data-catalog-how-to-register.md
