--- a/articles/data-share/TOC.yml
+++ b/articles/data-share/TOC.yml
@@ -19,6 +19,8 @@
       href: terminology.md
     - name: 角色和要求
       href: concepts-roles-permissions.md
+    - name: 了解定价
+      href: concepts-pricing.md
 - name: 示例
   items:
     - name: 代码示例
@@ -29,12 +31,12 @@
   items:
     - name: 监视
       href: how-to-monitor.md
-    - name: 配置数据集映射
-      href: how-to-configure-mapping.md
     - name: 疑难解答
       href: data-share-troubleshoot.md
     - name: 添加数据集
       href: how-to-add-datasets.md
+    - name: 配置数据集映射
+      href: how-to-configure-mapping.md
     - name: 添加收件人
       href: how-to-add-recipients.md
     - name: 删除邀请
