--- a/articles/cognitive-services/LUIS/toc.yml
+++ b/articles/cognitive-services/LUIS/toc.yml
@@ -22,11 +22,7 @@
     - name: 使用浏览器
       href: luis-get-started-get-intent-from-browser.md
     - name: 使用 SDK
-      items:
-        - name: 创作应用
-          href: sdk-authoring.md
-        - name: 查询预测终结点
-          href: sdk-query-prediction-endpoint.md
+      href: quickstart-sdk.md
     - name: 使用 REST API
       items:
         - name: 获取意向
