--- a/articles/zone-pivot-groups.yml
+++ b/articles/zone-pivot-groups.yml
@@ -528,10 +528,22 @@ groups:
     title: JavaScript
   - id: programming-language-spx
     title: CLI
+- id: programming-languages-voice-assistants
+  title: 编程语言
+  prompt: 选择编程语言
+  pivots:
+  - id: programming-language-csharp
+    title: C#
+  - id: programming-language-go
+    title: Go
+  - id: programming-language-java
+    title: Java
+  - id: programming-language-more
+    title: 更多语言...
 metadata:
-  ms.openlocfilehash: 4b45a1cd0fb06c37d79b629fd57329ea937694b8
-  ms.sourcegitcommit: c28fc1ec7d90f7e8b2e8775f5a250dd14a1622a6
+  ms.openlocfilehash: a51aa5fcc88269e718375ed08f0238867da7079b
+  ms.sourcegitcommit: 152c522bb5ad64e5c020b466b239cdac040b9377
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 08/13/2020
-  ms.locfileid: "88167515"
+  ms.lasthandoff: 08/14/2020
+  ms.locfileid: "88225625"
