--- a/articles/active-directory-domain-services/TOC.yml
+++ b/articles/active-directory-domain-services/TOC.yml
@@ -115,6 +115,8 @@
           href: join-rhel-linux-vm.md
         - name: Ubuntu Server
           href: join-ubuntu-linux-vm.md
+        - name: SUSE Linux Enterprise
+          href: join-suse-linux-vm.md
     - name: 部署应用程序
       items:
         - name: 部署 Azure AD 应用程序代理
