--- a/articles/cognitive-services/bing-local-business-search/toc.yml
+++ b/articles/cognitive-services/bing-local-business-search/toc.yml
@@ -15,7 +15,7 @@
     - name: REST API
       expanded: true
       items:
-        - name: '使用 C#'
+        - name: 使用 C#
           href: quickstarts/local-quickstart.md
         - name: 使用 Java
           href: quickstarts/local-search-java-quickstart.md
@@ -41,7 +41,7 @@
 - name: 资源
   items:
     - name: 试用认知服务
-      href: 'https://azure.microsoft.com/try/cognitive-services/?api=bing-web-search-api'
+      href: 'https://azure.microsoft.com/free/cognitive-services'
     - name: 定价信息
       href: 'https://azure.microsoft.com/pricing/details/cognitive-services/search-api/'
     - name: 合规性
