--- a/articles/cognitive-services/bing-visual-search/toc.yml
+++ b/articles/cognitive-services/bing-visual-search/toc.yml
@@ -12,7 +12,7 @@
     - name: REST API
       expanded: true
       items:
-        - name: '使用 C#'
+        - name: 使用 C#
           href: quickstarts/csharp.md
         - name: 使用 Java
           href: quickstarts/java.md
@@ -83,7 +83,7 @@
     - name: 语言支持
       href: language-support.md
     - name: 获取免费访问密钥
-      href: 'https://azure.microsoft.com/try/cognitive-services/?api=bing-visual-search-api'
+      href: 'https://azure.microsoft.com/free/cognitive-services'
     - name: 试试看！
       href: 'https://aka.ms/bingvisualsearchtryforfree'
     - name: 堆栈溢出
